<?xml version="1.0"?>
<package>
    <name>orbital_pkg</name>
    <version>1.11.0</version>
    <description>The orbital_avoidance package</description>

    <maintainer email="wodud3743@gmail.com">amc</maintainer>
    <license>Apache 2</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>autoware_build_flags</buildtool_depend>
    
    <build_depend>rospy</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>autoware_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>tf2_ros</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>autoware_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>tf2_ros</run_depend>
    <export></export>
</package>
